VSL-167: Add/Remove Owner + Change Threshold Single Action (#113)
* implement addSignerUpdateThreshold single action on FE

* implement remove signer + update threshold on FE in single action

* update Add Owner UI to FIGMA specs

* update UI for Add/Remove Owner to match FIGMA. Updates ReviewSafeEdit component to work for 3 different actions

* Update packages/client/src/components/SafeSettings/components/EditThreshold/EditThresholdForm.js

remove unused import

Co-authored-by: Manny404 <manny@art404.com>

* Update packages/client/src/components/SafeSettings/components/EditThreshold/ReviewSafeEdits.js

remove unused import

Co-authored-by: Manny404 <manny@art404.com>

* Update packages/client/src/App.sass

remove redundant comment

Co-authored-by: Manny404 <manny@art404.com>

* pr updates -- remove custom styling, set safeOwners after remove

* Update packages/client/src/components/SafeSettings/components/Owners/AddSafeOwner.js

Co-authored-by: Manny404 <manny@art404.com>

* Update packages/client/src/components/SafeSettings/components/Owners/AddSafeOwner.js

Co-authored-by: Manny404 <manny@art404.com>

* clean up css. use bluma .input class. reduce re-renders in AddSafeOwner

* rm unused var

* refactor ReviewSafeEdits into multiple components

* Add Owner -> New Owner copy

* refactor Review screens again, to DRY up code

* updates review screen border styles

* use modal title -- WIP

* fix last bugs of treasury state not updating! import useTreasury hooks from Web3Context

* style/design updates, remove console.logs

* final style tweaks on review threshold modal and input components

* Update packages/client/src/components/SafeSettings/components/EditThreshold/index.js

Co-authored-by: Manny404 <manny@art404.com>

* Update packages/client/src/components/SafeSettings/components/EditThreshold/index.js

Co-authored-by: Manny404 <manny@art404.com>

* Update packages/client/src/components/SafeSettings/

--- a/packages/client/src/App.sass
+++ b/packages/client/src/App.sass
@@ -84,7 +84,7 @@ $body-font-size: 14px
 /*********************Component variables -  Input********************/
 $input-border-width: 1px
 $input-focus-border-color: transparent
-$input-border-color: black
+$input-border-color: $grey-secondary
 $input-shadow: none
 $input-color: black
 
@@ -192,7 +192,7 @@ h2
   font-size: 1.8rem !important
 .is-size-6
   font-size: .9rem !important
-.has-text-heighlight
+.has-text-highlight
   font-family: $family-monospace
 .has-text-truncate
   white-space: nowrap
@@ -206,13 +206,17 @@ h2
   &-none
     border: none
   &-light
-    border: 1px solid $grey-light
+    border: 1px solid $grey-secondary
     &-top
-      border-top: 1px solid $grey-light
+      border-top: 1px solid $grey-secondary
     &-bottom
-      border-bottom: 1px solid $grey-light
+      border-bottom: 1px solid $grey-secondary
     &-right
-      border-right: 1px solid $grey-light
+      border-right: 1px solid $grey-secondary
+  &-success
+    border: 1px solid $success-green
+  &-error
+    border: 1px solid $error-red
 
 /********************* Custom utility css - Border radius********************/
 .rounded-sm
@@ -387,16 +391,29 @@ label
   user-select: none
 
 /********************* Custom utility css - Input ********************/
-input
+
+input,.input
   font-size: 1rem
-input,
-input:focus
+  height: auto
   border-width: 1px
+  &.is-error
+    border-color: $error-red
+input:focus,input.input:focus
+  box-shadow: none
+  border-color: $grey-light
+  &.is-success
+    box-shadow: none
+    border-color: $success-green
+  &.is-error
+    border-color: $error-red
 input[type=number]::-webkit-outer-spin-button,
-input[type=number]::-webkit-inner-spin-button 
+input[type=number]::-webkit-inner-spin-button,
+.input[type=number]::-webkit-outer-spin-button,
+.input[type=number]::-webkit-inner-spin-button 
   -webkit-appearance: none
   margin: 0
-input:focus-visible
+input:focus-visible,
+.input:focus-visible
   outline: none
 
 /********************* Custom utility css - Dropdown ********************/
@@ -443,6 +460,8 @@ hr
   width: 3px
   border-radius: 4px
 .table-border > :not(:last-child)
+  border-bottom: 1px solid $grey-secondary
+.table-border-bottom > :last-child
   border-bottom: 1px solid $grey-light
 .confirmation
   white-space: nowrap
@@ -462,3 +481,4 @@ hr
   scrollbar-width: none
 .confirmations::-webkit-scrollbar
     display: none
+
