--- a/packages/client/src/App.sass
+++ b/packages/client/src/App.sass
@@ -430,7 +430,7 @@ input:focus-visible,
 .flex-3
   flex: 3 0 0
 .flex-9
-  flex: 9 0 0
+  flex: 9
 
 
 /********************* Custom utility css - Animation ********************/
