VSL-187: Restructured the table for presenting things to do

--- a/packages/client/src/App.sass
+++ b/packages/client/src/App.sass
@@ -42,7 +42,7 @@ $yellow-tertiary: #FEFFDD
 
 //other
 $success-green: #18AA01
-$warning-orange: #F26300
+$warning-orange: #FF8833
 $error-red: #E30C0C
 
 /*********************Initial variables -  Font Sizes********************/
@@ -429,6 +429,10 @@ input:focus-visible,
   flex: 2 0 0
 .flex-3
   flex: 3 0 0
+.flex-4
+  flex: 4
+.flex-7
+  flex: 7
 .flex-9
   flex: 9
 
@@ -468,8 +472,6 @@ table th
   font-weight: normal
 .table-border > :not(:last-child)
   border-bottom: 1px solid $grey-secondary
-.table-border-bottom > :last-child
-  border-bottom: 1px solid $grey-light
 .confirmation
   white-space: nowrap
   padding: 15px 14px
