VSL-186: Updated the name of the css variable

--- a/packages/client/src/App.sass
+++ b/packages/client/src/App.sass
@@ -215,7 +215,7 @@ h2
       border-bottom: 1px solid $grey-secondary
     &-right
       border-right: 1px solid $grey-secondary
-  &-yellow
+  &-alert
     border: 1px solid $yellow-dark
   &-success
     border: 1px solid $success-green
