VSL-186: Updated modal for error handling (#124)
* VSL-186: Updated modal for error handling

* VSL-186: Renamed svgs and added type to button

* VSL-186: Updated svgs and error modal

* VSL-186: Changed the class name

* VSL-186: Updated the name of the css variable

--- a/packages/client/src/App.sass
+++ b/packages/client/src/App.sass
@@ -188,6 +188,8 @@ h2
   color: $grey-primary
 .has-text-purple
   color: $purple-primary
+.has-text-yellow-dark
+  color: $yellow-dark
 .is-size-4
   font-size: 1.8rem !important
 .is-size-6
@@ -213,6 +215,8 @@ h2
       border-bottom: 1px solid $grey-secondary
     &-right
       border-right: 1px solid $grey-secondary
+  &-alert
+    border: 1px solid $yellow-dark
   &-success
     border: 1px solid $success-green
   &-error
@@ -240,6 +244,8 @@ h2
   background: $purple-secondary
 .has-background-tertiary-purple
   background: $purple-tertiary
+.has-background-tertiary-yellow
+  background: $yellow-tertiary
 
 /********************* Custom utility css - Button ********************/
 .button
@@ -490,4 +496,3 @@ table th
   scrollbar-width: none
 .confirmations::-webkit-scrollbar
     display: none
-
