--- a/packages/client/src/App.sass
+++ b/packages/client/src/App.sass
@@ -100,8 +100,7 @@ $modal-background-background-color: rgba(1, 1, 1, 0.5)
 $modal-content-width: 430px
 .modal-content
   max-height: calc(100vh - 210px)
-  overflow-y: visibile !important
-  overflow-x: visible !important
+  overflow-y: scroll !important
 .modal-safe-name
   color: $purple-primary
   font-weight: 500
