add border radius to dropdown menu

--- a/packages/client/src/App.sass
+++ b/packages/client/src/App.sass
@@ -439,6 +439,8 @@ input:focus-visible,
   border-left: 1px solid $grey-secondary
   border-right: 1px solid $grey-secondary
   border-bottom: 1px solid $grey-secondary
+  border-bottom-left-radius: 8px
+  border-bottom-right-radius: 8px
 
 .dropdown-item
   padding: 1rem
