VSL-218: Addressed UI feedback for Add Assets Flow

--- a/packages/client/src/App.sass
+++ b/packages/client/src/App.sass
@@ -410,7 +410,7 @@ label
 
 input,.input
   font-size: 1rem
-  height: auto
+  height: 58px
   border-width: 1px
   &.is-error
     border-color: $error-red
